@@ -17,7 +17,7 @@
     <script type="text/javascript" src="/js/controls.js"></script>
     <script type="text/javascript" src="/js/effects.js"></script>
     <script type="text/javascript" src="/js/hint-textbox.js"></script>
-    <script type="text/javascript" src="/openflights.js?version=20081214"></script>
+    <script type="text/javascript" src="/openflights.js?version=20081215"></script>
   </head>
 
   <body>
@@ -36,7 +36,7 @@
 
 	    <div id="news" style="display: none">
 	      <img src="/img/close.gif" height=17 width=17 onClick='JavaScript:closeNews()'> 
-	      <B>News</b>: 13 Dec 2008: <a href="/about.html#CHANGES">"Basic" flight editor for quick multi-segment flights added.</a>
+	      <B>News</b>: 15 Dec 2008: <a href="/about.html#CHANGES">"Not in trip" filter option added (only when logged in).</a>
 	    </div>
 	    
 	    <div id="ajaxloader">
