@@ -1,3 +1,9 @@
+<b>2008-12-15</b>
+
+* "Not in trip" filter option added
+* Filter handling rationalized into php/filter.php:getFilterString()
+* Completed elite level handling framework
+
 <b>2008-12-14</b>
 
 * Clear flights after adding them in Basic mode
